Style fixing for runnable overflow, .lnk parsing on drop (now async)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,12 +50,13 @@ body {
   background-color: lightgrey;
   text-align: center;
   vertical-align: middle;
-  display: table-cell;
+  display: inline-block;
   overflow: hidden;
   word-wrap: break-word;
   max-width: 64px;
   max-height: 64px;
   cursor: pointer;
+  line-height: 64px;
 }
 
 .runnable:hover {
@@ -66,10 +67,12 @@ body {
   display: none;
   max-width: 64px;
   max-height: 64px;
+  line-height: normal;
+  vertical-align: middle;
 }
 
 .runnable:hover .appName {
-  display: block;
+  display: inline-block;
 }
 
 .selected {
